evnronment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  labels:
    app: demo
spec:
  replicas: 5
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: 989625238085.dkr.ecr.us-east-1.amazonaws.com/demo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
